# ifmo_iot_scooters

./: .env  .gitignore  .sdkmanrc  Cargo.toml  Makefile  README.md  docker-compose.yml  pom.xml
concept/: sequence.drawio
deploy/: docker-compose.scooter-fake-client.yml  docker-compose.scooter-server.yml
docker/: fluent-bit.Dockerfile  prometheus.Dockerfile  scooter-map-api.Dockerfile  scooters-api.Dockerfile  scooters-fake-client.Dockerfile
fluent-bit/: fluent-bit.conf  parsers.conf  plugins.conf
prometheus/: entrypoint.sh  prometheus.yml
proto/: map_model.proto  model.proto  scooters_api.proto
scooter-client/: .env  Makefile  pyproject.toml
scooter-client/scooter_client/: __main__.py  scooter.py  settings.py  utils.py
scooters-core/: pom.xml
scooters-core/src/main/java/io/dmtri/scooters/config/: ConfigFactory.java  MetricsConfig.java
scooters-fake-client/: .env  Cargo.toml  build.rs
scooters-fake-client/src/: main.rs  strategy.rs  utils.rs
scooters-map-api/: pom.xml
scooters-map-api/src/main/java/io/dmtri/scooters/: Main.java  ScooterMapApiImpl.java
scooters-map-api/src/main/java/io/dmtri/scooters/config/: MapApiConfig.java  MapApiConfigFactory.java  MapConfig.java
scooters-map-api/src/main/java/io/dmtri/scooters/map/: MapGenerator.java
scooters-map-api/src/main/java/io/dmtri/scooters/prometheus/: MapApiMetrics.java
scooters-map-api/src/main/resources/: config.properties
scooters-proto-java/: pom.xml
scooters-server/: pom.xml
scooters-server/src/main/java/io/dmtri/scooters/: Main.java  ScootersApiImpl.java
scooters-server/src/main/java/io/dmtri/scooters/clients/: CachedMapApiClient.java  MapApiClient.java
scooters-server/src/main/resources/: config.properties  logback.xml  ydb.sql
(+14 files in other folders)
