[package]
name = "scooters-fake-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.83"
rand = "0.8.5"
enum_dispatch = "0.3.13"
dotenvy = "0.15.7"
glam = "0.27.0"
envconfig = "0.10.0"

[build-dependencies]
tonic-build = "0.11"
